<resources>
    <string name="app_name">My Simple Ledger</string>

    <string name="amount_hint">Amount</string>
    <string name="contact_name_hint">Buyer/Seller</string>
    <string name="description_hint">Description</string>
    <string name="transaction_type_sell">Sell</string>
    <string name="transaction_type_buy">Buy</string>
    <string name="transaction_status_complete">Complete</string>
    <string name="transaction_status_dena">Dena</string>
    <string name="transaction_status_paone">Paona</string>
    <string name="save">save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_menu_transaction_list_title">Transactions</string>
    <string name="home_bottom_menu_transaction_add_title">Add Transaction</string>

    <string name="base_url">www.something.com/</string>
    <string name="transaction_label">Transaction</string>
    <string name="menu_settings_title">Settings</string>
    <string name="backup_status_backup">All data is backed up.</string>
    <string name="backup_status_not_backup">Not all data is backed up.</string>
    <string name="backup_last_backup_tag">Last backup</string>
    <string name="auto_sync_label">Auto Sync</string>
    <string name="no_transaction_tag">No transaction to show.</string>
    <string name="errorLoadingData">Error in loading data. <br />Swipe down to reload.</string>
    <string name="sync_now">Sync Now</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="dosnt_have_account">Doesn\'t have account? <u><font fgcolor="#0349FA">Create one.</font></u></string>
    <string name="already_have_account">Already have an account? <u><font fgcolor="#0349FA">Sign In.</font></u></string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="code_send_email">A password reset code has been sent to your registered email: </string>
    <string name="code">Enter Code</string>
    <string name="submit">Submit</string>
    <string name="edit_mail"><u>Edit email</u></string>
    <string name="password_condition1">Password must be 8 characters</string>
    <string name="password_condition2">Password must have 1 upper case (AB) &amp; 1 lower case letter  (ab)</string>
    <string name="password_condition3"><![CDATA[Password must have 1 number (123) and Special character]]></string>
    <string name="internet_error">"check internet connection "</string>
    <string name="success">Success</string>
    <string name="last_sync">Last sync</string>
    <string name="status_not_backup">Not all data is backed up.</string>

</resources>