<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"

    >

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/amountTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/taka_icon_1"
        android:hint="@string/amount_hint"
        app:startIconTint="@color/black"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/amountTextField"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/amountTextFieldLayout"
        android:id="@+id/contactNameTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/person_icon"
        android:hint="@string/contact_name_hint"
        app:startIconTint="@color/black"
        android:layout_marginTop="@dimen/add_transaction_input_field_top_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/contactNameTextField"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/contactNameTextFieldLayout"
        android:id="@+id/descriptionTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/description_icon"
        android:hint="@string/description_hint"
        app:startIconTint="@color/black"
        android:layout_marginTop="@dimen/add_transaction_input_field_top_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/descriptionTextField"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/dateCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextFieldLayout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/add_transaction_input_field_top_margin"
        app:cardCornerRadius="5dp"
        android:elevation="11dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/dateLayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/dateTextView"
                android:text="11-06-2021"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                />
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/date_icon"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/dateCard"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transactionTypeRadioGroup"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/add_transaction_radio_group_left_margin"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_sell"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/radioButtonSell"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_buy"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/radioButtonBuy"
            />
    </RadioGroup>
    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/transactionTypeRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/add_transaction_input_field_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transactionStatusRadioGroup"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/add_transaction_radio_group_left_margin"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_status_complete"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/radioButtonComplete"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_status_dena"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/radioButtonDena"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_status_paone"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/radioButtonPaona"
            />
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="11dp"
        android:text="@string/save"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/saveButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>