<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.registration.fragment.OtpCodeFragment">

    <TextView
        android:id="@+id/tv_code_send_mail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/code_send_email"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/tv_edit_mail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit_mail"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintTop_toBottomOf="@id/tv_code_send_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="#D81F1F"
        android:textSize="16dp"
        android:textStyle="bold"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintTextColor="@color/textColor"
        android:hint="@string/code"
        app:boxStrokeColor="@color/textColor"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textCursorDrawable="@drawable/text_cursor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_margin="16dp"
        android:textSize="19dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:text="@string/submit"
        android:backgroundTint="#FAE103"
        android:textColor="@color/textColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>